--- a/api/package.json
+++ b/api/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "description": "Desafio tarefas",
   "dependencies": {
+    "@prisma/client": "^5.19.1",
     "cors": "^2.8.5",
     "express": "^4.19.2",
     "prisma": "^5.19.1"
