--- a/api/package.json
+++ b/api/package.json
@@ -3,7 +3,8 @@
   "version": "1.0.0",
   "main": "src/index.js",
   "scripts": {
-    "start": "node src/index.js"
+    "start": "node src/index.js",
+    "dev": "nodemon src/index.js"
   },
   "keywords": [],
   "author": "Kaique Oliveira Antonio",
@@ -14,5 +15,8 @@
     "cors": "^2.8.5",
     "express": "^4.19.2",
     "prisma": "^5.19.1"
+  },
+  "devDependencies": {
+    "nodemon": "^3.1.4"
   }
 }
